# Autonomous-Delivery-Team

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO_AUTONOMY.md  __init__.py  changes.py  debug_workflow.py  file_validator.py  import_resolver.py  launch.bat  main.py  pyproject.toml  requirements.txt  requirements_input.py  test_runner.py  upload_service.py
config/: workflow_policy.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  OPERATIONS.md  POLICY_FORMAT_AND_INTEGRATION.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.md  REQUIREMENTS.md  ROADMAP.md  SCREENSHOTS.md  V0_3_AUTONOMY_HARDENING_CHECKLIST.md  V0_4_CROSS_REPO_AUTONOMY_BACKLOG.md  V0_4_CROSS_REPO_AUTONOMY_TODO.md
orchestration/: repo_ingestion.py
scripts/: demo_acceptance.py  demo_escalation.py  demo_resume_e2e.py
services/: requirement_service.py
src/: __init__.py
test_autonomous_delivery_repo/: README.md  app.py
tests/: conftest.py  test_agent_actions.py  test_changes.py  test_dashboard_ui.py  test_dashboard_ui_integration.py  test_end_to_end.py  test_escalation_workflow.py  test_file_validator.py  test_import_conventions.py  test_multi_repo.py  test_policy_externalization.py  test_repo_profiler.py  test_repo_profiler_ext.py  test_repo_profiler_robust.py  test_store_persistence.py  test_upload_service.py  test_workflow_engine.py
ui/: actions.py  analytics.py  app.py  config.py  launcher.py  loader.py  (+2 more)
(+373 files in other folders)
